pending task to finished task?

--- a/toDoListDragAndDrop/toDoListDragAndDrop.html
+++ b/toDoListDragAndDrop/toDoListDragAndDrop.html
@@ -18,8 +18,8 @@
         <div class="task" id="task-4" draggable="true">Task 4</div>
         <div class="task" id="task-5" draggable="true">Task 5</div>
       </div>
-      <div class="task" id="finished-task">
-        <div class="title">Finished Task</div>
+      <div class="task" id="finished-tasks">
+        <h2 class="title">Finished Task</h2>
       </div>
     </div>
 
