load bar dos maneras de crearlas

--- a/loadBar/loadBar.html
+++ b/loadBar/loadBar.html
@@ -15,6 +15,6 @@
     </div>
     <!-- Loader 1 element -->
     <div id="load-bar" class="load-bar"></div>
-    <script src="scripts.js"></script>
+    <script src="loadBar.js"></script>
   </body>
 </html>
