--- a/IndexDB/index.html
+++ b/IndexDB/index.html
@@ -9,17 +9,18 @@
   <body>
     <h1 class="title">IndexDB API</h1>
 
-    <form class="form" id="form">
+    <form id="form" class="form">
       <label for="task">Task</label>
       <input type="text" name="task" />
       <select name="priority">
         <option value="low">Low</option>
-        <option value="normal">normal</option>
-        <option value="High">High</option>
+        <option value="normal">Normal</option>
+        <option value="high">High</option>
       </select>
-      <button class="form__button">Add Task</button>
+      <button class="button">Add Task</button>
     </form>
-    <div id="tasks"></div>
+    <div id="tasks" class="tasks"></div>
+    <script src="scripts.js"></script>
     <script src="scripts.js"></script>
   </body>
 </html>
