--- a/notificationsApi/index.html
+++ b/notificationsApi/index.html
@@ -8,9 +8,7 @@
   </head>
   <body>
     <h1 class="title">API's - Notifications -</h1>
-
-    <button id="permissions">Permisions</button>
-
+    <button id="permissions" class="button">Permisions</button>
     <script src="scripts.js"></script>
   </body>
 </html>
